# kvault

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: index.html
docs/docs/: build-from-source.html  faq.html  getting-started.html  index.html  installation.html  shortcuts.html
docs/docs/assets/: docs.css  docs.js
docs/docs/features/: accounts.html  bulk-operations.html  (+10 more)
public/KVault Icon.icon/: icon.json
scripts/: release.cjs  release.js
src/: App.tsx  index.css  main.tsx  monaco-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs  mock.rs
src-tauri/src/cloudflare/: client.rs  error.rs  models.rs
src-tauri/src/commands/: accounts.rs  filters.rs  keys.rs  mod.rs  namespaces.rs  sync.rs  update.rs  workspaces.rs
src-tauri/src/db/: accounts.rs  filters.rs  keys.rs  migrations.rs  mod.rs  workspaces.rs
src-tauri/src/update/: github.rs  mod.rs  types.rs
src/hooks/: useKeyboard.ts
src/lib/: export.ts  import.ts  tauri.ts
src/stores/: accountStore.ts  keyStore.ts  layoutStore.ts  searchStore.ts  settingsStore.ts  syncStore.ts  tabStore.ts  toastStore.ts  updateStore.ts  workspaceStore.ts
src/themes/: catppuccin-latte.ts  catppuccin-mocha.ts  cursor-dark.ts  dracula.ts  github-light.ts  index.ts  nord.ts  one-dark-pro.ts  one-light.ts  quiet-light.ts  solarized-light.ts  types.ts
(+36 files in other folders)
